app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

html {
  @apply scroll-smooth;
}

.rm-container {
  @apply w-full max-w-screen-2xl mx-auto px-4 sm:px-6 lg:px-8;
}

.primary-btn {
  @apply uppercase min-w-min px-6 py-3 rounded-md text-sm font-bold text-white bg-apple-700 hover:bg-apple-600 focus:outline-none;
}

.secondary-btn {
  @apply uppercase min-w-min px-6 py-3 rounded-md text-sm font-bold text-white bg-mucky-800 hover:bg-mucky-600 focus:outline-none;
}

.clear-btn {
  @apply uppercase min-w-min px-6 py-3 rounded-md text-sm font-bold text-mucky-950 bg-mucky-50 hover:bg-mucky-100 hover:text-apple-700 focus:outline-mucky-700;
}

.h2 {
  @apply uppercase text-4xl md:text-5xl xl:text-6xl font-bold tracking-wide text-center pb-24 mx-auto;
}

@layer base {
  :root {
    --background: 0 0% 100%;

    --foreground: 0 0% 3.9%;

    --card: 0 0% 100%;

    --card-foreground: 0 0% 3.9%;

    --popover: 0 0% 100%;

    --popover-foreground: 0 0% 3.9%;

    --primary: 0 0% 9%;

    --primary-foreground: 0 0% 98%;

    --secondary: 0 0% 96.1%;

    --secondary-foreground: 0 0% 9%;

    --muted: 0 0% 96.1%;

    --muted-foreground: 0 0% 45.1%;

    --accent: 0 0% 96.1%;

    --accent-foreground: 0 0% 9%;

    --destructive: 0 84.2% 60.2%;

    --destructive-foreground: 0 0% 98%;

    --border: 0 0% 89.8%;

    --input: 0 0% 89.8%;

    --ring: 0 0% 3.9%;

    --chart-1: 12 76% 61%;

    --chart-2: 173 58% 39%;

    --chart-3: 197 37% 24%;

    --chart-4: 43 74% 66%;

    --chart-5: 27 87% 67%;

    --radius: 0.5rem;
  }
  .dark {
    --background: 0 0% 3.9%;

    --foreground: 0 0% 98%;

    --card: 0 0% 3.9%;

    --card-foreground: 0 0% 98%;

    --popover: 0 0% 3.9%;

    --popover-foreground: 0 0% 98%;

    --primary: 0 0% 98%;

    --primary-foreground: 0 0% 9%;

    --secondary: 0 0% 14.9%;

    --secondary-foreground: 0 0% 98%;

    --muted: 0 0% 14.9%;

    --muted-foreground: 0 0% 63.9%;

    --accent: 0 0% 14.9%;

    --accent-foreground: 0 0% 98%;

    --destructive: 0 62.8% 30.6%;

    --destructive-foreground: 0 0% 98%;

    --border: 0 0% 14.9%;

    --input: 0 0% 14.9%;

    --ring: 0 0% 83.1%;

    --chart-1: 220 70% 50%;

    --chart-2: 160 60% 45%;

    --chart-3: 30 80% 55%;

    --chart-4: 280 65% 60%;

    --chart-5: 340 75% 55%;
  }
}

@layer base {
  * {
    @apply border-border;
  }
  body {
    @apply bg-background text-foreground;
  }
}

